k8s-manifests/eva-accession-ws/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eva-accession-ws-dev
  labels:
    environment: development
